--- a/comflex.css
+++ b/comflex.css
@@ -3,7 +3,7 @@ img{
     width: 100%;
 }
 .row{
-    height: 500px;
+  
     margin-bottom: 10px;
 }
 .row{
@@ -33,4 +33,20 @@ img{
 }
 .third-row > div{
      flex:1;
+}
+@media screen and (max-width:576px) {
+    .second-row, .third-row{
+        flex-direction: column;
+
+    }
+    .third-row-second-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+}
+@media screen and (min-width:577px) {
+    
+    .row{
+        height: 500px;
+    }
 }
